--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap4-input-clearer",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "jQuery plugin for adding a clear icon to a Bootstrap 4 input field",
   "main": "bootstrap4-input-clearer.js",
   "scripts": {
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/mheigl/bootstrap4-input-clearer",
   "peerDependencies": {
-    "jquery": ">=3.1"
+    "jquery": ">=3.1",
+    "bootstrap": ">=4.0.0"
   }
 }
